--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -52,7 +52,8 @@ jobs:
         if: always()
         run: |
           shortenertest -test.v -test.run=^TestIteration1$ \
-              -binary-path=cmd/shortener/shortener
+              -binary-path=cmd/shortener/shortener \
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #2"
         if: always()
@@ -69,7 +70,8 @@ jobs:
         run: |
           shortenertest -test.v -test.run=^TestIteration4$ \
               -source-path=. \
-              -binary-path=cmd/shortener/shortener
+              -binary-path=cmd/shortener/shortener \
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #5"
         if: always()
@@ -80,7 +82,8 @@ jobs:
               -binary-path=cmd/shortener/shortener \
               -server-host=$SERVER_HOST \
               -server-port=$SERVER_PORT \
-              -server-base-url="http://$SERVER_HOST:$SERVER_PORT"
+              -server-base-url="http://$SERVER_HOST:$SERVER_PORT" \
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #6"
         if: always()
@@ -91,7 +94,8 @@ jobs:
               -binary-path=cmd/shortener/shortener \
               -server-port=$SERVER_PORT \
               -file-storage-path=$TEMP_FILE \
-              -source-path=.
+              -source-path=. \
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #7"
         if: always()
@@ -102,21 +106,24 @@ jobs:
               -binary-path=cmd/shortener/shortener \
               -server-port=$SERVER_PORT \
               -file-storage-path=$TEMP_FILE \
-              -source-path=.
+              -source-path=. \
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #8"
         if: always()
         run: |
           shortenertest -test.v -test.run=^TestIteration8$ \
               -source-path=. \
-              -binary-path=cmd/shortener/shortener
+              -binary-path=cmd/shortener/shortener \
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #9"
         if: always()
         run: |
           shortenertest -test.v -test.run=^TestIteration9$ \
               -source-path=. \
-              -binary-path=cmd/shortener/shortener
+              -binary-path=cmd/shortener/shortener \
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #10"
         if: always()
